JsonTableLoader in a correct shape; messing with NchessPanel

--- a/nchess-lib/pom.xml
+++ b/nchess-lib/pom.xml
@@ -28,7 +28,7 @@
 				<configuration>
 					<archive>
 						<manifest>
-							<mainClass>Main</mainClass>
+							<mainClass>com.github.elementbound.nchess.demos.ViewDemo</mainClass>
 						</manifest>
 					</archive>
 					<source>1.8</source>
