--- a/nchess-lib/pom.xml
+++ b/nchess-lib/pom.xml
@@ -5,6 +5,10 @@
 	<artifactId>nchess</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>javax.json</groupId>
@@ -22,19 +26,43 @@
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<version>2.6</version>
-
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.5</version>
 				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>`
+					
 					<archive>
 						<manifest>
 							<mainClass>com.github.elementbound.nchess.demos.ViewDemo</mainClass>
 						</manifest>
 					</archive>
-					<source>1.8</source>
-					<target>1.8</target>
 				</configuration>
 			</plugin>
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<version>2.6</version>
+				<configuration>
+						<descriptorRefs>
+							<descriptorRef>jar-with-dependencies</descriptorRef>
+						</descriptorRefs>
+					<archive>
+						<manifest>
+							<mainClass>com.github.elementbound.nchess.demos.ViewDemo</mainClass>
+						</manifest>
+					</archive>
+				</configuration>
+				<executions>
+					<execution>
+						<id>make-assembly</id>
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
+
 	</build>
 </project>
