--- a/nchess-lib/pom.xml
+++ b/nchess-lib/pom.xml
@@ -30,7 +30,7 @@
 				<version>3.5</version>
 				<configuration>
 					<source>1.8</source>
-					<target>1.8</target>`
+					<target>1.8</target>
 					
 					<archive>
 						<manifest>
@@ -42,23 +42,68 @@
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
 				<version>2.6</version>
-				<configuration>
-						<descriptorRefs>
-							<descriptorRef>jar-with-dependencies</descriptorRef>
-						</descriptorRefs>
-					<archive>
-						<manifest>
-							<mainClass>com.github.elementbound.nchess.demos.ViewDemo</mainClass>
-						</manifest>
-					</archive>
-				</configuration>
 				<executions>
+					<!-- ViewDemo -->
 					<execution>
-						<id>make-assembly</id>
+						<id>assemble-ViewDemo</id>
 						<phase>package</phase>
 						<goals>
 							<goal>single</goal>
 						</goals>
+						
+						<configuration>
+								<descriptorRefs>
+									<descriptorRef>jar-with-dependencies</descriptorRef>
+								</descriptorRefs>
+								<finalName>${project.artifactId}-ViewDemo</finalName>
+							<archive>
+								<manifest>
+									<mainClass>com.github.elementbound.nchess.demos.ViewDemo</mainClass>
+								</manifest>
+							</archive>
+						</configuration>
+					</execution>
+					
+					<!-- CLIServer -->
+					<execution>
+						<id>assemble-CLIServer</id>
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+						
+						<configuration>
+								<descriptorRefs>
+									<descriptorRef>jar-with-dependencies</descriptorRef>
+								</descriptorRefs>
+								<finalName>${project.artifactId}-CLIServer</finalName>
+							<archive>
+								<manifest>
+									<mainClass>com.github.elementbound.nchess.demos.CLIServer</mainClass>
+								</manifest>
+							</archive>
+						</configuration>
+					</execution>
+					
+					<!-- EchoClient -->
+					<execution>
+						<id>assemble-EchoClient</id>
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+						
+						<configuration>
+								<descriptorRefs>
+									<descriptorRef>jar-with-dependencies</descriptorRef>
+								</descriptorRefs>
+								<finalName>${project.artifactId}-EchoClient</finalName>
+							<archive>
+								<manifest>
+									<mainClass>com.github.elementbound.nchess.demos.EchoClient</mainClass>
+								</manifest>
+							</archive>
+						</configuration>
 					</execution>
 				</executions>
 			</plugin>
