--- a/nchess-lib/pom.xml
+++ b/nchess-lib/pom.xml
@@ -25,6 +25,18 @@
 			<artifactId>commons-lang3</artifactId>
             <version>3.7</version>
         </dependency>
+
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.6.6</version>
+		</dependency>
+
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.0.9</version>
+		</dependency>
 	</dependencies>
 
 	<build>
