JsonTableLoader split and Parser refactor ( P.S. on the first opportunity I will just start using Jackson )

--- a/nchess-lib/pom.xml
+++ b/nchess-lib/pom.xml
@@ -20,10 +20,16 @@
 			<artifactId>javax.json</artifactId>
 			<version>1.0.4</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
             <version>3.7</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>19.0</version>
         </dependency>
 
 		<dependency>
