--- a/nchess-lib/pom.xml
+++ b/nchess-lib/pom.xml
@@ -154,4 +154,14 @@
 		</plugins>
 
 	</build>
+
+  <reporting>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>3.0.0</version>
+      </plugin>
+    </plugins>
+  </reporting>
 </project>
