--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.github.elementbound</groupId>
 	<artifactId>nchess</artifactId>
-	<version>3.0.0-SNAPSHOT</version>
+	<version>3.1.0-SNAPSHOT</version>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -124,6 +124,27 @@
 							<archive>
 								<manifest>
 									<mainClass>com.github.elementbound.nchess.demos.RandomMoveClient</mainClass>
+								</manifest>
+							</archive>
+						</configuration>
+					</execution>
+
+					<!-- Monte Carlo client -->
+					<execution>
+						<id>assemble-MonteCarloClient</id>
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+
+						<configuration>
+							<descriptorRefs>
+								<descriptorRef>jar-with-dependencies</descriptorRef>
+							</descriptorRefs>
+							<finalName>${project.artifactId}-MonteCarloClient</finalName>
+							<archive>
+								<manifest>
+									<mainClass>com.github.elementbound.nchess.montecarlo.MonteCarloClient</mainClass>
 								</manifest>
 							</archive>
 						</configuration>
